# agentic-ledger

./: .env  .env.example  .gitignore  README.md  check_db.py  pyproject.toml
src/: event_store.py  migrate.py  schema.sql
src/aggregates/: agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: handlers.py
src/integrity/: audit_chain.py  gas_town.py
src/mcp/: resources.py  server.py  tools.py
src/models/: events.py
src/projections/: agent_performance.py  application_summary.py  compliance_audit.py  daemon.py
src/regulatory/: package.py
src/upcasting/: registry.py  upcasters.py
src/what_if/: projector.py
tests/: conftest.py  test_concurrency.py  test_domain_rules.py  test_gas_town.py  test_integrity_tamper.py  test_mcp_lifecycle.py  test_projection_slo.py  test_projections.py  test_upcasting.py
